finishes delete route on dashboard

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -19,12 +19,13 @@
 
           <div class="form-outline mb04">
             <label class="form-label" for="blog-content">Content:</label>
-            <textarea id="blog-content" class="form-control form-control-lg" style="resize: none; font-size: 1rem; height: 30vh; line-height: 2rem"></textarea>
+            <textarea id="blog-content" class="form-control form-control-lg" style="resize: none; font-size: 1rem; height: 30vh; line-height: 2rem" required></textarea>
           </div>
 
-          <button type="submit" id="login-Btn" class="mx-auto p-2 btn btn-primary btn-lg btn-block" style="width: 100%">Create Post</button>
+          <button id="create-Btn" class="mx-auto p-2 btn btn-primary btn-lg btn-block" style="width: 100%">Create Post</button>
         </form>
       </div>
     </div>
   </div>
 </section>
+<script src="/create.js"></script>
