--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,7 +10,7 @@
 </head>
     <nav class="navbar navbar-expand-lg bg-primary " >
   <div class="container-fluid ">
-    <a class="navbar-brand text-white" href="./">Tech Blog</a>
+    <a class="navbar-brand text-white" href="/">Tech Blog</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,7 +20,7 @@
           <a class="nav-link text-white" aria-current="page" href="./">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" href="./dashboard">Dashboard</a>
+          <a class="nav-link text-white" href="/dashboard">Dashboard</a>
         </li>
       </ul>
       <div class="d-flex" role="search">
