--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -1,46 +1,22 @@
 <div class="container" >
     {{#if user.logged_in}}
-    <section class="vw-100">
-        <div class="container py-5">
-            <div class="align-items-center justify-content-center h-100">
-            <div class="col-md-8 col-lg-7 col-xl-6">
-            </div>
-            <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
-                <form>
-                <div class="form-outline mb-4">
-                        <label class="form-label" for="blog-title">Title:</label>
-                    <input type="text" id="blog-title" class="form-control form-control-lg" required />
-                </div>
-                <div class="form-outline mb-4">
-                    <label class="form-label" for="blog-description">Description:</label>
-                    <input type="text" id="blog-description" class="form-control form-control-lg" required/>
-                </div>
-
-                <div class="form-outline mb04">
-                    <label class="form-label" for="blog-content">Content:</label>
-                    <textarea id="blog-content" class="form-control form-control-lg" style="resize: none; font-size: 1rem; height: 30vh; line-height: 2rem"></textarea>
-                </div>
-
-                <button type="submit" id="login-Btn" class="mx-auto p-2 btn btn-primary btn-lg btn-block" style="width: 100%">Create Post</button>
-                </form>
-            </div>
-        </div>
-  </div>
-</section>
     {{#each blogs}}
     <div class="col">
         <div class="col-sm">
-            <div class="card" style="width: 36rem;">
+            <div class="card" style="width: 50vw; height: 36vh">
                 <div class="card-body">
-                    <h5 class="card-title">{{{dataValues.title}}}</h5>
-                    <p class="card-text">{{{dataValues.content}}}</p>
-                    <p class="card-text">{{{dataValues.author}}}</p>
+                   <a href="/api/blog/{{{dataValues.id}}}"><h5 class="card-title">{{{dataValues.title}}}</h5></a>
+                    <p class="card-text">By: {{{dataValues.author}}}</p>
                     <p class="card-text">{{{dataValues.createdAt}}}</p>
-                    <a href="./create"><button>Comment on Post</button></a>
+                    <button class="btn btn btn-success text-white comment">Comment on Post</button>
+                    <form class="form" style="display: none;">
+                    <input class="form-control form-control-lg comment-text" type="text" required />
+                    <button class="btn btn btn-success text-white submit">Submit</button>
+                    <button class="btn btn btn-danger text-white cancel" >Cancel</button>
+                    </form>
                 </div>
             </div>
-        </div>   
-
+        </div>
     {{/each}}
      {{/if}}
          {{#unless user.logged_in}}
@@ -51,7 +27,7 @@
                 <div class="card-body">
                     <h5 class="card-title">{{{dataValues.title}}}</h5>
                     <p class="card-text">{{{dataValues.content}}}</p>
-                    <p class="card-text">{{{dataValues.author}}}</p>
+                    <p class="card-text">By: {{{dataValues.author}}}</p>
                     <p class="card-text">{{{dataValues.createdAt}}}</p>
                 </div>
             </div>
