completes all acceptance criteria.

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -4,8 +4,8 @@
         <div class="col-sm">
             <div class="card" style="width: 36rem;">
                 <div class="card-body">
-                    <a href="/api/blog/{{{dataValues.id}}}"><h5 class="card-title id">{{{dataValues.title}}}</h5></a>
-                    <p class="card-text">{{{dataValues.description}}}</p>
+                    <a href="/api/blog/{{{dataValues.id}}}"><h5 class="card-title">{{{dataValues.title}}}</h5></a>
+                    <p class="card-text">{{{dataValues.description}}} </p>
                     <p class="card-text id" data-id="{{{dataValues.id}}}">{{{dataValues.createdAt}}}</p>
                     <button class="btn btn-danger text-white delete">Delete</button>
                 </div>
