--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -1,10 +1,39 @@
+<div id="blog-post" style="margin-bottom: 8%;">
     <div>
-        <div>
-            <div class="card" style="width: 100vw;">
-                <div class="card-body">
-                   <h2 class="card-title" style="text-align: center;">{{{blog.dataValues.title}}}</h5>
-                   <p class="card-text style="text-align: center;"">By: {{{blog.dataValues.user.dataValues.username}}}</p>
-                    <p class="card-text">{{{blog.dataValues.content}}}</p>
-                </div>
+        <div class="card" style="width: 100vw;">
+            <div class="card-body">
+                <h2 class="card-title id" style="text-align: center;" data-id="{{{blog.dataValues.id}}}">{{{blog.dataValues.title}}}</h5>
+                <p class="card-text" style="text-align: center; margin-bottom: 2%">By: {{{blog.dataValues.user.dataValues.username}}}</p>
+                       <p class="card-text" style="text-align: center; margin-bottom: 4%; font-size:smaller">{{{blog.dataValues.createdAt}}}</p>
+                <p class="card-text">{{{blog.dataValues.content}}}</p>
             </div>
         </div>
+    </div>
+</div>
+<div id="comment-list" style="display:flex; flex-wrap:wrap; justify-content:space-evenly; padding: 0 10%">
+{{#each blog.comments}}
+    <div class="card" style="width: 21%; margin-bottom: 4%;">
+        <div class="card-body">
+            <h5 class="card-title">From {{{user.dataValues.username }}}</h5>
+            <p class="card-text">{{{dataValues.content}}}</p>
+        </div>
+    </div>
+{{/each}}
+</div>
+
+</div>
+    {{#if user.logged_in}}
+<div id="comment-form" style="text-align: center;">
+    <label for="comment">Write a Comment!</label>
+    <form class="form" id="comment">
+        <input class="form-control form-control-lg comment-text" id="comment-input" type="text" style="width: 50vw; margin: 0 auto 11px auto;" required />
+        <button class="btn btn btn-success text-white submit">Submit</button>
+    </form>
+</div>
+{{/if}}
+    {{#unless user.logged_in}}
+    <p>Please login to comment on this post!</p>
+    {{/unless}}
+{{#if user.logged_in}}
+<script src="/comment.js"></script>
+{{/if}}
