--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -18,12 +18,8 @@
              <label class="form-label" for="form1Example23">Password:</label>
             <input type="password" id="password-login" class="form-control form-control-lg" required/>
           </div>
-
-          <div class="d-flex justify-content-around align-items-center mb-4">
-            <a href="#!">Forgot password?</a>
-          </div>
             <div class="d-flex justify-content-around align-items-center mb-4">
-                <a href="#!">Don't have an account? Sign Up!</a>
+                <a href="/signup">Don't have an account?</a>
             </div>
           <button type="submit" id="login-Btn" class="mx-auto p-2 btn btn-primary btn-lg btn-block" style="width: 100%">Sign in</button>
         </form>
