--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -30,7 +30,7 @@
         {{/unless}}
         {{#if user.logged_in}}
             <p class="text-white nav-item">Welcome, {{{user.username}}}</p>
-            <a href="/create"><button class="btn btn btn-success ms-4 text-white" type="button">New Post</button></a>
+            <a href="/create"><button class="btn btn btn-success ms-4 text-white" type="button">+New Post</button></a>
             <button class="btn btn btn-danger ms-4 text-white" id="logout-btn" type="button">Logout</button>
         {{/if}}
       </div>
