--- a/views/blogpost.handlebars
+++ b/views/blogpost.handlebars
@@ -11,8 +11,9 @@
     </div>
 </div>
 <div id="comment-list" style="display:flex; flex-wrap:wrap; justify-content:space-evenly; padding: 0 10%">
+<h3 style="text-align: center;">Comments</h3>
 {{#each blog.comments}}
-    <div class="card" style="width: 21%; margin-bottom: 4%;">
+    <div class="card" style="width: 100%; margin-bottom: 4%;">
         <div class="card-body">
             <h5 class="card-title">From {{{user.dataValues.username }}}</h5>
             <p style="font-size: smaller; font-style: italic;">{{{dataValues.createdAt}}}</p>
