--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -4,7 +4,7 @@
     {{#each blogs}}
     <div class="col">
         <div class="col-sm">
-            <div class="card" style="width: 50vw; height: 25vh">
+            <div class="card">
                 <div class="card-body">
                     <a href="/api/blog/{{{dataValues.id}}}"><h5 class="card-title">{{{dataValues.title}}}</h5></a>
                     <p class="card-text">By: {{{user.dataValues.username}}}</p>
@@ -19,7 +19,7 @@
          {{#each blogs}}
     <div class="col">
         <div class="col-sm">
-            <div class="card" style="width: 36rem;">
+            <div class="card">
                 <div class="card-body">
                     <a href="/api/blog/{{{dataValues.id}}}"><h5 class="card-title">{{{dataValues.title}}}</h5></a>
                     <p class="card-text">By: {{{user.dataValues.username}}}</p>
