changes formatting in dashboard

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -2,7 +2,7 @@
 {{#each blog}}
     <div class="col">
         <div class="col-sm">
-            <div class="card" style="width: 36rem;">
+            <div class="card">
                 <div class="card-body">
                     <a href="/api/blog/{{{dataValues.id}}}"><h5 class="card-title">{{{dataValues.title}}}</h5></a>
                     <p class="card-text">{{{dataValues.description}}} </p>
