updates create post styling

--- a/views/create.handlebars
+++ b/views/create.handlebars
@@ -5,6 +5,7 @@
       </div>
       <div class="col-md-7 col-lg-5 col-xl-5 offset-xl-1">
         <form>
+        <h2 class="mb-2 py-1"> New Post </h2>
           <!-- Email input -->
           <div class="form-outline mb-4">
                 <label class="form-label" for="blog-title">Title:</label>
@@ -22,7 +23,7 @@
             <textarea id="blog-content" class="form-control form-control-lg" style="resize: none; font-size: 1rem; height: 30vh; line-height: 2rem" required></textarea>
           </div>
 
-          <button id="create-Btn" class="mx-auto p-2 btn btn-primary btn-lg btn-block" style="width: 100%">Create Post</button>
+          <button id="create-Btn" class="mx-auto p-2 mt-4 btn btn-primary btn-lg btn-block" style="width: 100%">Create Post</button>
         </form>
       </div>
     </div>
